# SDL3_gpu_example

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md
examples/: CMakeLists.txt
examples/01_triangle/: CMakeLists.txt  main.cpp
examples/02_buffer/: CMakeLists.txt  main.cpp  shader.vert
examples/03_texture/: CMakeLists.txt  main.cpp  shader.frag
examples/04_cube/: CMakeLists.txt  main.cpp
examples/05_misc/: CMakeLists.txt  main.cpp  shader.frag
